# colorchecker-detection

./: .gitignore  CMakeLists.txt  README.md  colorchecker.py  detection.json  mccfindnet.py  utils.py
detectlib/: colorchecker.py  imageutl.py  netutility.py  render.py  visualizationutl.py
mcclib/: CMakeLists.txt  bound_min.cpp  bound_min.h  charts.cpp  charts.h  checker_detector.cpp  checker_detector.h  checker_model.cpp  checker_model.h  common.cpp  common.h  core.cpp  core.h  debug.cpp  debug.h  graph_cluster.cpp  graph_cluster.h  mcc.cpp  mcc.h  pywrapper.cpp  pywrapper.h  wiener_filter.cpp  wiener_filter.h
models/detection/: deploy.prototxt  original.prototxt  solver.prototxt  status.pickle  train_val.prototxt
rec/: renameFilesIt.sh  run-img.sh  run-sec.sh  run-vdo.sh
src/: CMakeLists.txt  app_mcc.cpp  app_mcc.h  app_system.cpp  app_system.h
tests/: CMakeLists.txt  mcctest.cpp
